update index.html file
I have given my webage a title.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<html>
+<html> 
+  <head> 
+    <title> My name is Rane, and this is my Github! </title? 
+      </head>
+      
   <body>
     Hello there, awesome person! 
   </body>
