--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title> My name is Rane, and this is my Github! </title? 
       </head>
       
-  <body>
+    <head>
+        <title>My awesome web page</title>
+    </head>
+
     Hello there, awesome person! 
   </body>
 </html>
